# dpi-bye

./: .gitignore  dpi-bypass.ps1  engine.py  index.html  main.py  pyproject.toml  readme.md
docs/: TECH_STACK.md
scripts/: stop.ps1
tests/: test_packet.py
